# asyncpg-trek

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: workflow.yaml
asyncpg_trek/: __init__.py  _backend.py  _collect.py  _revision.py  _run.py  _solver.py  _types.py  _typing.py  aiosqlite.py  asyncpg.py  run.py
tests/: backend.py  conftest.py  test_aiosqlite.py  test_asyncpg.py  test_collecting.py  test_run.py  test_solving.py
tests/asyncpg_revisions/: 20220410_rev1_up_rev2.py  20220410_rev2_up_rev3.sql  20220410_rev3_up_rev4bad.sql  2022_04_10_12_34_00_mig1.up.sql  2022_04_10_12_34_00_mig2.py  2022_04_10_12_34_00_mig3_bad_migration.sql  names.txt
tests/revisions_1/: 2022_04_10_12_34_00_mig1.sql  2022_04_11_12_34_00_mig2.up.sql  2022_04_12_12_34_00_mig3.down.sql  2022_04_12_12_34_00_mig3.up.sql  2022_04_13_12_34_00_mig4.py  2022_04_14_12_34_00_mig5.py
tests/sqlite_revisions/: 20220412_rev2_down_rev1.sql  20220413_rev3_up_rev4.py  20220413_rev4_up_rev5.py  20220413_rev5_down_rev4.py  2022_04_10_12_34_00_mig1.sql  2022_04_11_12_34_00_mig2.up.sql  2022_04_12_12_34_00_mig3.up.sql  2022_04_13_12_34_00_mig4.py  2022_04_14_12_34_00_mig5.py
